--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,179 @@ ol, li, dl, dt, dd, form, a, fieldset, input, th, td
 margin: 0; padding: 0; border: 0; outline: none;
 }
 
+/**** END RESET ****/
+
+/***MENU***/
+
+nav#menuBox{
+  position: fixed;
+  z-index: 999;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--green);
+  text-align: center;
+}
+
+nav#menuBox .lead{
+  display: none;
+}
+
+#menuBox ul li {
+  width: 35vw;
+  height: 35vw;
+  z-index: 600;
+  opacity: 1;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(-50%, -50%);
+}
+
+#menuBox ul li:first-child{
+  top: 29%;
+  left: 24%;
+}
+
+#menuBox ul li:nth-child(2){
+  top: 31%;
+  left: 71%;
+}
+
+#menuBox ul li:nth-child(3){
+  top: 88%;
+  left: 67%;
+}
+
+#menuBox ul li:nth-child(4){
+  top: 54%;
+  left: 47%;
+}
+
+#menuBox ul li:nth-child(5){
+  top: 84%;
+  left: 19%;
+}
+
+#menuBox ul li a{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  position: relative;
+  transition: all .8s ease-in-out;
+}
+
+#menuBox ul li a:hover{
+  transform:  scale(1.2);
+  z-index: 99;
+  transition: all .8s ease-in-out;
+}
+
+#menuBox ul li a .trama{
+  height: 100%;
+  width: 100%;
+  background-color: white;
+  border-radius: 50%;
+  -webkit-mask-position: 50%;
+  mask-position: 50%;
+  -webkit-mask-size: 100%;
+  mask-size: 100%;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+
+}
+
+#menuBox ul li a .name{
+  text-align: center;
+  width: 75%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  position: absolute;
+}
+
+#menuBox ul li:nth-child(1) a .trama{
+  -webkit-mask-image: url(../images/menu-trama-1.svg);
+  mask-image: url(../images/menu-trama-1.svg);
+  animation: 10s infinite der linear;
+}
+
+#menuBox ul li:nth-child(2) a .trama{
+  -webkit-mask-image: url(../images/menu-trama-2.svg);
+  mask-image: url(../images/menu-trama-2.svg);
+  animation: 15s infinite izq linear;
+}
+
+#menuBox ul li:nth-child(3) a .trama{
+  -webkit-mask-image: url(../images/menu-trama-3.svg);
+  mask-image: url(../images/menu-trama-3.svg);
+  animation: 8s infinite der linear;
+}
+
+#menuBox ul li:nth-child(4) a .trama{
+  -webkit-mask-image: url(../images/menu-trama-4.svg);
+  mask-image: url(../images/menu-trama-4.svg);
+  animation: 18s infinite izq linear;
+}
+
+#menuBox ul li:nth-child(5) a .trama{
+  -webkit-mask-image: url(../images/menu-trama-5.svg);
+  mask-image: url(../images/menu-trama-5.svg);
+  animation: 12s infinite der linear;
+}
+
+#menuBox ul li a .name .title{
+  word-break: keep-all;
+  color: white;
+  margin-bottom: 2%;
+  font-family: var(--font-curaduria);
+  font-size: calc(1.7vw + 1.3vh);
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+  
+@keyframes izq {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(-360deg);
+  }
+}
+
+@keyframes der {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes arrow {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(5px);
+  }
+}
+
+/***END MENU***/
+
 a, button{
   font-family: 'objektiv-mk1', sans-serif;
 }
