--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ margin: 0; padding: 0; border: 0; outline: none;
 
 nav#menuBox{
   position: fixed;
-  z-index: 999;
+  z-index: 1000;
   width: 100vw;
   height: 100vh;
   background-image: url(../images/menu-back-white.png);
@@ -542,11 +542,13 @@ p.curaduria, h4.destacado2{
   position: relative;
   z-index: 1;
   transition: all 1s ease-in-out;
+  z-index: 1000;
 }
 
 .wrapper.hide{
   opacity: 0;
   transition: all 1s ease-in-out;
+  z-index: 999;
 }
 
 /*h4.destacado2{
@@ -828,7 +830,7 @@ header{
   position: fixed;
   padding: 32px 10px;
   width: 100%;
-  z-index: 1000;
+  z-index: 1003;
 }
 
 h1{
@@ -2325,6 +2327,18 @@ padding:0;
     min-height: 300px;
     padding-bottom: 40px;
     
+  }
+
+  .openMenu#menuBox ul li{
+    width: 50vw;
+    height: 50vw;
+  }
+
+  .openMenu#menuBox ul li a .name .title{
+    font-size: calc(2.2vw + 1.8vh);
+  }
+  .logo-inside{
+    padding: 20px 0;
   }
 }
 
